Update grafana to 4.3.2

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,11 +27,11 @@ http {
   gzip_disable "msie6";
 
   server {
-    listen 80 default_server;
-    server_name _;
+    listen 80;
     location / {
-      root /src/grafana;
-      index index.html;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   Host      $http_host;
+        proxy_pass         http://localhost:3000;
     }
   }
 }
