--- a/supervisord.conf
+++ b/supervisord.conf
@@ -13,3 +13,8 @@ stdout_logfile = /var/log/supervisor/%(program_name)s.log
 stderr_logfile = /var/log/supervisor/%(program_name)s.log
 autorestart = true
 
+[program:grafana]
+command = /usr/local/bin/run_grafana
+stdout_logfile = /var/log/supervisor/%(program_name)s.log
+stderr_logfile = /var/log/supervisor/%(program_name)s.log
+autorestart = true
